# TokenTally

./: AGENTS.md  LICENSE  README.md  setup.cfg
clients/go/: README.md  client.go
clients/python/: README.md  token_tally_client.py
clients/typescript/: README.md  index.ts
docs/: customer_discovery_calls.md  design_partner_loi_template.md  pricing_dsl.md  soc2_risk_assessment.md  soc2_type1_plan.md  soc2_type2_plan.md
docs/preseed_pitch_deck/: outline.md
frontend/: README.md  next-auth.d.ts  package.json
frontend/components/: Navbar.tsx
frontend/lib/: api.ts
frontend/messages/: en.json  fr.json
frontend/pages/: _app.tsx  audit.tsx  index.tsx  login.tsx  markup-rules.tsx  offers.tsx  org-users.tsx  register.tsx  upload-receipt.tsx  usage.tsx
frontend/server/: db.ts  router.ts
gateway-worker/: README.md  package.json  providers.json  tsconfig.json  wrangler.toml
gateway-worker/src/: index.ts  (+1 more)
receipt_processor/: README.md  ocr.py  offer_matching.py  processor.py  service.py
scripts/: setup_clickhouse_multi_region.sh
tests/: load_nextauth.mjs  test_audit_log.py  test_billing_cli.py  test_billing_quickbooks.py  test_budget_alert.py  test_budget_cli.py  test_clickhouse_ledger.py  test_clients_retry.py  test_commitment_manager.py  test_cost_router.py  test_forecast_cli.py  test_fx_rates.py  test_gpu_arbitrage.py  test_markup_fx.py  test_metrics.py  test_netsuite.py  test_nextauth_config.py  test_payout_service.py  test_pricing_cli.py  test_soc2_monitor.py  test_stripe_webhook.py  test_token_counter.py  test_usage_export.py  test_usage_ledger.py
(+45 files in other folders)
