[metadata]
name = token-tally
version = 0.1.0

[options]
packages = find:
python_requires = >=3.11

[options.entry_points]
console_scripts =
    token-tally-billing=token_tally.billing_cli:cli
    token-tally-forecast=token_tally.forecast_cli:cli
    token-tally-pricing=token_tally.pricing_cli:cli
    token-tally-budget=token_tally.budget_cli:cli
